js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-function-return-import-source-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
function
fn
(
)
{
return
import
.
source
(
'
<
module
source
>
'
)
;
}
reportCompare
(
0
0
)
;
