js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-return-import-defer-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
return
import
.
defer
(
)
;
}
